# ModernCppChallenge

./: .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  CONTRIBUTING.md  README.md  get_code_cov.sh  tidy.sh
.circleci/: config.yml
CMakeModules/: CodeCoverage.cmake  Coveralls.cmake  CoverallsClear.cmake  CoverallsGenerateGcov.cmake
src/algorithms_data_structs/: circular_buffer.h  circular_iterator.h  double_buffer.h  game_of_life.cpp  game_of_life.h  game_of_life_run.cpp  most_frequent.h  movies_rating.h  pairwise.h  permutation.h  phone_numbers_filter.cpp  phone_numbers_filter.h  phone_numbers_transform.cpp  phone_numbers_transform.h  priority_queue.h  select.h  shortest_path.h  sort.h  text_histogram.h  weasel_program.cpp  weasel_program.h  weasel_run.cpp  zip.h
src/concurrency/: custom_service_system.h  custom_service_system_simulation.cpp  parallel_search_async.h  parallel_search_threads.h  parallel_sort.h  parallel_transform.h  parallel_transform_benchmark.cpp  sync_log.h
src/datetime/: calendar.cpp  calendar.h  date.cpp  date.h  day_diff.cpp  day_diff.h  function_timer.h  timezone_meeting.cpp  timezone_meeting.h
src/design_patterns/: acceptance_system.h  observed_vector.h  password_generator.h  password_validator.h  price_calculator.h  social_insurance_number_generator.h
src/lang/: BasicArray.h  IPv4.cpp  IPv4.h  container_minimum.h  contains_helpers.h  temperature_scales.h  unique_handle.h  value_adder.h
src/math/: abundant_numbers.cpp  abundant_numbers.h  amicable_numbers.cpp  amicable_numbers.h  armstrong_numbers.cpp  armstrong_numbers.h  collatz_sequence.cpp  collatz_sequence.h  compute_pi.h  gray_code.cpp  gray_code.h  greatest_common_divisor.cpp  greatest_common_divisor.h  isbn_validate.cpp  isbn_validate.h  largest_prime.cpp  largest_prime.h  least_common_multiple.cpp  least_common_multiple.h  numerical_to_roman.cpp  numerical_to_roman.h  prime_factors.cpp  prime_factors.h  sexy_prime_pairs.cpp  sexy_prime_pairs.h  sum_of_naturals.cpp  sum_of_naturals.h
src/serialization/: xml_serde.h  xml_xpath.h
src/stream_fs/: directory_size.h  logger.cpp  logger.h  pascal_triangle.h  regex_find.h  remove_empty_lines.h  remove_old_files.h  tabular_printing.cpp  tabular_printing.h
src/string/: bin2str.h  capitalize.h  date_transform.h  join.h  license_plate.h  longest_palindrome.h  parse_uri.h  str2bin.h  tokenize.h
tst/algorithms_data_structs/: circular_buffer_test.cpp  double_buffer_test.cpp  most_frequent_test.cpp  movies_rating_test.cpp  pairwise_test.cpp  permutation_test.cpp  phone_numbers_filter_test.cpp  phone_numbers_transform_test.cpp  priority_queue_test.cpp  select_test.cpp  shortest_path_test.cpp  sort_test.cpp  text_histogram_test.cpp  weasel_test.cpp  zip_test.cpp
tst/concurrency/: custom_service_system_test.cpp  parallel_search_async_test.cpp  parallel_search_threads_test.cpp  parallel_sort_test.cpp  parallel_transform_test.cpp  sync_log_test.cpp
tst/datetime/: calendar_test.cpp  date_of_the_year_test.cpp  day_diff_test.cpp  day_of_the_week_test.cpp  function_timer_test.cpp  timezone_meeting_test.cpp
tst/design_patterns/: acceptance_system_test.cpp  observed_vector.cpp  password_generator_test.cpp  password_validator_test.cpp  price_calculator_test.cpp  social_insurance_number_generator_test.cpp
tst/lang/: BasicArray_test.cpp  IPv4_test.cpp  container_minimum_test.cpp  contains_helpers_test.cpp  temperature_scales_test.cpp  unique_handle_test.cpp  value_adder_test.cpp
tst/math/: abundant_numbers_test.cpp  amicable_numbers_test.cpp  armstrong_numbers_test.cpp  collatz_sequence_test.cpp  compute_pi_test.cpp  gray_code_test.cpp  greatest_common_divisor_test.cpp  isbn_validate_test.cpp  largest_prime_test.cpp  least_common_multiple.cpp  numerical_to_roman_test.cpp  prime_factors_test.cpp  sexy_primes_pair_test.cpp  sum_of_naturals_test.cpp
tst/res/serialization/: no_movies.xml  one_movie.xml  two_movies.xml
tst/serialization/: xml_serde_test.cpp  xml_xpath_test.cpp
tst/stream_fs/: directory_size_test.cpp  filesystem_helpers.h  logger_test.cpp  pascal_triangle_test.cpp  regex_find_test.cpp  remove_empty_lines_test.cpp  remove_old_files_test.cpp  tabular_printing_test.cpp
tst/string/: bin2str_test.cpp  capitalize_test.cpp  date_transform_test.cpp  join_test.cpp  license_plate_test.cpp  longest_palindrome_test.cpp  parse_uri_test.cpp  str2bin_test.cpp  tokenize_test.cpp
